Rework the cache buffers, sketch, and tests.
Split admissions and promotions onto a lossless write ring so occupancy stays intact, and drop window/protected recency instead of stalling on the drain lock. Independent sketch hashes, a real Zipf generator, and a local JUnit runner replace the old @Contended export and broken measurements. The repo is the library and tests only.

Co-authored-by: Cursor <cursoragent@cursor.com>